<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragment.payment">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white"
        android:minHeight="?attr/actionBarSize"
        android:theme="?attr/actionBarTheme"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/ivBackProfile"
        android:layout_width="34dp"
        android:layout_height="35dp"
        android:layout_marginTop="16dp"
        app:layout_constraintEnd_toEndOf="@+id/toolbar2"
        app:layout_constraintHorizontal_bias="0.044"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/img_13" />

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:fillViewport="true"
        android:paddingBottom="12dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/toolbar2">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/textView18"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="4dp"
                android:fontFamily="@font/monsemibold"
                android:text="@string/confirmation"
                android:textSize="28sp"
                app:layout_constraintEnd_toEndOf="@+id/textView19"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/textView19"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:text="@string/order_number_is_4839200012"
                android:fontFamily="@font/monmedium"
                android:textSize="16sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.106"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView18" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/recycle"
                android:layout_width="412dp"
                android:layout_height="373dp"
                android:nestedScrollingEnabled="false"
                tools:listitem="@layout/adapterconfirmation"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView19"
                app:layout_constraintVertical_bias="0.042">
            </androidx.recyclerview.widget.RecyclerView>

            <TextView
                android:id="@+id/shipadd"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="196dp"
                android:fontFamily="@font/monsemibold"
                android:text="@string/payment_method"
                android:textSize="18sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.055"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/recycle" />

            <TextView
                android:id="@+id/shipaddedit"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="12dp"
                android:fontFamily="@font/mon"
                android:text="@string/edit1"
                android:textSize="18sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.914"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/recycle" />

            <TextView
                android:id="@+id/shipdetail"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="48dp"
                android:fontFamily="@font/mon"
                android:text="@string/free_shipping_2_3_day"
                android:textSize="15sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.067"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/recycle" />

            <TextView
                android:id="@+id/paymentmeathod"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="12dp"
                android:text="@string/delivery_details"
                android:fontFamily="@font/monsemibold"
                android:textSize="18sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.06"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/recycle" />

            <TextView
                android:id="@+id/paymentcard"
                android:layout_width="285dp"
                android:layout_height="56dp"
                android:layout_marginTop="136dp"
                android:fontFamily="@font/mon"
                android:text="@string/monika_willems_455_larkspur_dr_california_springs_ca_92926_usa"
                android:textSize="15sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.096"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/recycle" />

            <TextView
                android:id="@+id/paymentedit"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="104dp"
                android:fontFamily="@font/mon"
                android:text="@string/edit2"
                android:textSize="18sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.917"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/recycle" />

            <TextView
                android:id="@+id/addrestext"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="280dp"
                android:fontFamily="@font/monsemibold"
                android:text="@string/_103_88"
                android:textSize="18sp"
                android:gravity="end"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.955"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/recycle" />

            <TextView
                android:id="@+id/orderrate"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="228dp"
                android:fontFamily="@font/mon"
                android:text="@string/visa_electron_6280"
                android:textSize="15sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.064"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/recycle" />

            <TextView
                android:id="@+id/paymentedit1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="196dp"
                android:fontFamily="@font/mon"
                android:text="@string/edit3"
                android:textSize="18sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.914"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/recycle" />
            <TextView
                android:id="@+id/addrestext1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="96dp"
                android:fontFamily="@font/monsemibold"
                android:text="@string/shipping_address"
                android:textSize="18sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.054"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/recycle" />

            <TextView
                android:id="@+id/addresstext2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="312dp"
                android:fontFamily="@font/mon"
                android:text="@string/your_total_amount_of_discount"
                android:textSize="15sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.079"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/recycle" />
            <TextView
                android:id="@+id/orderamount"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="276dp"
                android:fontFamily="@font/monsemibold"
                android:text="@string/order_amount"
                android:textSize="18sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.066"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/recycle" />

            <TextView
                android:id="@+id/orderamount1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="312dp"
                android:fontFamily="@font/mon"
                android:text="@string/_55_02"
                android:gravity="end"
                android:textSize="15sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.962"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/recycle" />

            <Button
                android:id="@+id/button4"
                android:layout_width="match_parent"
                android:layout_height="57dp"
                android:background="@drawable/shapebutton"
                android:textColor="@color/white"
                android:text="@string/place_order"
                android:layout_marginStart="@dimen/_10sdp"
                android:layout_marginEnd="@dimen/_10sdp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/addresstext2"
                app:layout_constraintVertical_bias="0.105" />


        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.core.widget.NestedScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>